# talus-standard-report

./: .cookiecutter.json  .flake8  .gitignore  CONTRIBUTING.rst  Makefile  README.md  README.rst  noxfile.py  pyproject.toml
apps/: streamlit_app.py
docs/: conf.py  index.rst  reference.rst  usage.rst
src/talus_standard_report/: __init__.py  components.py  constants.py  data_loader.py  report_figure_abstract_class.py  report_figures.py  utils.py
src/talus_standard_report/components/: custom_protein_uploader.py  dataset_choice.py
src/talus_standard_report/figures/: file_size_dataframe.py  go_enrichment_figure.py  hit_selection_figure.py  nuclear_protein_overlap_figure.py  num_peptides_per_protein_figure.py  peptide_intensities_box_plot_figure.py  peptide_intensities_clustergram.py  peptide_intensities_pca_plot.py  peptide_intensities_scatter_matrix_figure.py  protein_intensities_heatmap.py  report_figure_abstract_class.py  subcellular_location_enrichment_figure.py  unique_peptides_proteins_figure.py
tests/: __init__.py  test_main.py  test_utils.py
