[tool.poetry]
name = "talus-standard-report"
version = "0.0.4"
description = "Talus Standard Report"
authors = ["Rico Meinl <rmeinl@talus.bio>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/rmeinl/talus-standard-report"
repository = "https://github.com/rmeinl/talus-standard-report"
documentation = "https://talus-standard-report.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/rmeinl/talus-standard-report/releases"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0.0"
streamlit = "^0.84.1"
watchdog = "^2.0.2"
boto3 = "^1.18.21"
plotly = "^5.1.0"
toolz = "^0.11.1"
inflection = "^0.5.1"
dash-bio = "^0.7.0"
scikit-learn = "^0.24.2"
talus-utils = "^0.1.4"
talus-aws-utils = "^0.0.6"
fpdf = "^1.7.2"
dataframe-image = "^0.1.1"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.4"}
safety = "^1.10.3"
mypy = "^0.902"
typeguard = "^2.12.1"
xdoctest = {extras = ["colors"], version = "^0.15.4"}
sphinx = "^4.0.2"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.11.1"
darglint = "^1.8.0"
reorder-python-imports = "^2.5.0"
pre-commit-hooks = "^4.0.1"
sphinx-rtd-theme = "^0.5.2"
sphinx-click = "^3.0.1"
Pygments = "^2.9.0"
data-science-types = "^0.2.23"
deepdiff = "^5.5.0"

[tool.poetry.scripts]
talus-standard-report = "talus_standard_report.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["talus_standard_report"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["src", "tests"]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.nox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
  | \.ipynb_checkpoints
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
